# cradle-app

./: .env.example  .gitignore  AGENTS.md  KEYBINDINGS.md  README.md  doctor.config.json  drizzle.config.ts  eslint.config.mjs  knip.json  marketplace.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sgconfig.yml  skills-lock.json  tsconfig.cli.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
.claude/: settings.local.json
ast-grep/: README.md  audit-sgconfig.yml  broad-audit-sgconfig.yml  wrapper-compatibility-report.md
chronicle/: Cargo.toml  README.md
chronicle/src/: README.md  config.rs  daemon.rs  error.rs  json.rs  lib.rs  main.rs  meeting.rs  models.rs  ocr.rs  time.rs
chronicle/src/audio/: activity.rs  asr.rs  capture.rs  mod.rs  screen_capture_kit_audio.rs  vad.rs  wav.rs
chronicle/src/integrations/: README.md  cradle_server.rs  mod.rs
chronicle/src/onnx/: asr.rs  embedding.rs  mod.rs  pii.rs  runtime.rs  speaker.rs  vad.rs
chronicle/src/recorder/: README.md  artifacts.rs  fingerprint.rs  manager.rs  mod.rs  sampler.rs
chronicle/src/screen/: README.md  inbox.rs  macos.rs  mod.rs  privacy_filter.rs  synthetic.rs
chronicle/src/store/: README.md  mod.rs
chronicle/tests/: README.md  smoke.rs
daily-release-notes/: 2026-06-22-daily-release-notes.md  2026-06-23-daily-release-notes.md  2026-06-24-daily-release-notes.md  2026-06-25-daily-release-notes.md  2026-06-26-daily-release-notes.md
documentations/: README.md  package.json  proxy.ts  source.config.ts  tsconfig.json
e2e/: AGENTS.md  cucumber.mjs  tsconfig.json
(+3106 files in other folders)
