[package]
name = "cradle-chronicle"
version = "0.1.0"
edition = "2024"
description = "Cradle-owned passive context and memory pipeline"
license = "UNLICENSED"

[lib]
name = "cradle_chronicle"
path = "src/lib.rs"

[[bin]]
name = "cradle-chronicle"
path = "src/main.rs"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-graphics-types = "0.2"
core-foundation = "0.10"
foreign-types = "0.5"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSArray",
  "NSDictionary",
  "NSError",
  "NSObject"
] }
objc2-core-audio-types = { version = "0.3.2", features = [ "objc2" ] }
objc2-core-media = { version = "0.3.2", features = [
  "CMSampleBuffer",
  "CMBlockBuffer",
  "CMFormatDescription",
  "CMTime",
  "objc2"
] }
objc2-screen-capture-kit = "0.3.2"
dispatch2 = { version = "0.3", features = [ "objc2" ] }
block2 = "0.6"

[dependencies]
cpal = "0.17.3"
dirs = "6"
hound = "3.5.1"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = [ "load-dynamic" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sherpa-onnx = { version = "1.13.2", optional = true }
tokenizers = { version = "0.21", default-features = false, features = [ "onig" ] }
ureq = "3"

[features]
default = [ "sherpa-asr" ]
sherpa-asr = [ "dep:sherpa-onnx" ]

[dev-dependencies]
tempfile = "3.27.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
